Improvements to DSP and catalog serving
